--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="bg-light">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-info">
             <div class="container">
@@ -38,25 +38,32 @@
         </nav>
     </header>
     <main class="container">
+        <h2 class="text-center text-info  fw-bolder mt-3">Read More, Learn More, Earn More</h2>
         <section class="my-4">
             <!-- Search Box -->
             <div class="d-flex">
-                <input id="search-input" type="text" class="form-control me-2"
+                <input id="search-input" type="text" class="form-control me-2 fw-light"
                     placeholder="Type Book's Name To Search" />
-                <button class="btn btn btn-dark" onclick="loadBooks()" id="search-btn">Search</button>
+                <button class="btn btn-lg btn-info text-light fw-bolder" onclick="loadBooks()"
+                    id="search-btn">Search</button>
             </div>
+
+            <!-- Error Field  -->
             <div id="error"></div>
-            <p id="" class="text-center my-2 fw-bolder">Total Result Found: <span id="">43434</span></p>
+            <!-- Total Search Result  -->
+            <p id="" class="text-center my-2">Total <span class="fw-bolder" id="total-items">0</span> Search Result
+                Found
+            </p>
         </section>
         <!-- Search Result  -->
         <section id="books-container" class="row row-cols-1 row-cols-md-2 g-4 mb-5">
         </section>
     </main>
-    <!--     <footer class="bg-info py-1 mt-5 fixed-bottom">
-        <p class="container text-center text-light fw-bolder mt-3">&copy; 2021 | Design & Developed By <a
+    <footer class="bg-info py-0 mt-0 fixed-bottom">
+        <p class="container text-center text-light fw-bolder mt-2 mb-1">&copy; 2021 | Design & Developed By <a
                 class="text-dark fw-bolder" href="https://codermahabub.com/">CoderMahabub</a>
         </p>
-    </footer> -->
+    </footer>
     <script src="js/main.js"></script>
 </body>
 
