--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-light">
+<body class="bg-light bg-opacity-50">
+    <!-- Header Starts Here  -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-info">
             <div class="container">
@@ -37,6 +38,8 @@
             </div>
         </nav>
     </header>
+    <!-- Header Ends Here  -->
+    <!-- Main Section Starts Here  -->
     <main class="container">
         <h2 class="text-center text-info  fw-bolder mt-3">Read More, Learn More, Earn More</h2>
         <section class="my-4">
@@ -47,21 +50,22 @@
                 <button class="btn btn-outline-info" onclick="loadBooks()" id="search-btn">Search</button>
             </div>
 
-            <!-- Error Field  -->
+            <!-- Message Field  -->
             <div id="error"></div>
-            <!-- Total Search Result  -->
-            <p class="text-center rounded my-2 bg-dark text-light py-2 w-50 mx-auto"><span class="fw-bolde text-info"
-                    id="total-items">0 </span> Search Results Found </p>
+
         </section>
-        <!-- Search Result  -->
-        <section id="books-container" class="row row-cols-1 row-cols-md-2 g-4 mb-5">
-        </section>
+        <!-- Display Search Result  -->
+        <section id="books-container" class="row row-cols-1 row-cols-md-2 g-4 mb-5"></section>
     </main>
+    <!-- Main Section Ends Here  -->
+    <!-- Footer Starts Here  -->
     <footer class="bg-info py-0 mt-0 fixed-bottom">
         <p class="container text-center text-light fw-bolder mt-2 mb-1">&copy; 2021 | Design & Developed By <a
                 class="text-dark fw-bolder" href="https://codermahabub.com/">CoderMahabub</a>
         </p>
     </footer>
+    <!-- Footer Ends Here  -->
+    <!-- JS LINK -->
     <script src="js/main.js"></script>
 </body>
 
